--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,27 +1,27 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@chakra-ui/icons": "^1.0.5",
-    "@chakra-ui/react": "^1.4.2",
-    "@chakra-ui/theme-tools": "1.1.2",
-    "@emotion/react": "11.1.5",
-    "@emotion/styled": "11.1.5",
-    "framer-motion": "^4.0.3",
-    "next": "^12.1.4",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
-  },
-  "devDependencies": {
-    "@types/node": "^14.6.0",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "eslint": "8.12.0",
-    "eslint-config-next": "12.1.4",
-    "typescript": "4.3.2"
-  }
+    "private": true,
+    "scripts": {
+        "dev": "next",
+        "build": "next build",
+        "start": "next start"
+    },
+    "dependencies": {
+        "@chakra-ui/icons": "1.0.5",
+        "@chakra-ui/react": "1.4.2",
+        "@chakra-ui/theme-tools": "1.1.2",
+        "@emotion/react": "11.1.5",
+        "@emotion/styled": "11.1.5",
+        "framer-motion": "4.0.3",
+        "next": "12.1.4",
+        "react": "18.0.0",
+        "react-dom": "18.0.0"
+    },
+    "devDependencies": {
+        "@types/node": "14.6.0",
+        "@types/react": "17.0.3",
+        "@types/react-dom": "17.0.3",
+        "eslint": "8.12.0",
+        "eslint-config-next": "12.1.4",
+        "typescript": "4.3.2"
+    }
 }
