--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -43,6 +43,12 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
+		<!-- <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency> -->
+		
 	</dependencies>
 
 	<build>
