chore: remoção de pull de arquivos de configuração

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -6,6 +6,10 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
+# node configuration 
+package-lock.json
+
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
@@ -38,6 +42,7 @@ bower_components
 build/Release
 
 # Dependency directories
+node/
 node_modules/
 jspm_packages/
 
@@ -102,3 +107,5 @@ dist
 
 # TernJS port file
 .tern-port
+
+
