--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -44,6 +44,13 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<dependency>
+   			<groupId>org.hibernate.orm</groupId>
+    		<artifactId>hibernate-core</artifactId>
+    		<version>6.0.0.Final</version>
+		</dependency>
+
+
 		<!-- <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
