--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -49,6 +49,13 @@
     		<artifactId>hibernate-core</artifactId>
     		<version>6.0.0.Final</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/joda-time/joda-time -->
+		<dependency>
+		    <groupId>joda-time</groupId>
+		    <artifactId>joda-time</artifactId>
+		    <version>2.10.14</version>
+		</dependency>
+
 
 
 		<!-- <dependency>
