--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,11 @@
         "@chakra-ui/theme-tools": "1.1.2",
         "@emotion/react": "11.1.5",
         "@emotion/styled": "11.1.5",
-    "framer-motion": "^4.0.3",
-    "next": "latest",
-        "formik": "^2.2.9",
         "framer-motion": "^4.0.3",
         "next": "latest",
+        "formik": "^2.2.9",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "yup": "^0.32.11"
+        "react-dom": "^17.0.2"
     },
     "devDependencies": {
         "@types/node": "^14.6.0",
