--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,14 @@
         "next": "latest",
         "formik": "^2.2.9",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "@hookform/resolvers": "^2.6.1",
+        "express-jwt": "^6.0.0",
+        "jsonwebtoken": "^8.5.1",
+        "prop-types": "^15.7.2",
+        "react-hook-form": "^7.12.1",
+        "rxjs": "^7.3.0",
+        "yup": "^0.32.9"
     },
     "devDependencies": {
         "@types/node": "^14.6.0",
