--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,15 +12,16 @@
         "@chakra-ui/theme-tools": "1.1.2",
         "@emotion/react": "11.1.5",
         "@emotion/styled": "11.1.5",
-        "framer-motion": "^4.0.3",
-        "next": "latest",
-        "formik": "^2.2.9",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
         "@hookform/resolvers": "^2.6.1",
         "express-jwt": "^6.0.0",
+        "formik": "^2.2.9",
+        "framer-motion": "^4.0.3",
         "jsonwebtoken": "^8.5.1",
+        "next": "latest",
+        "nookies": "^2.5.2",
         "prop-types": "^15.7.2",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
         "react-hook-form": "^7.12.1",
         "rxjs": "^7.3.0",
         "yup": "^0.32.9"
