chore: correção configurações banco

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/pi_gestao_creche
+spring.datasource.url= jdbc:postgresql://localhost:5432/gestao-creche
 spring.datasource.username= postgres
 spring.datasource.password= postgres
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
